# data-juicer-agents

./: .gitignore  404.html  README_ZH.md  pyproject.toml
data/: cleaned-output.jsonl  eval-out-01.jsonl  eval-out-02.jsonl  eval-out-03.jsonl  eval-out-04.jsonl  eval-out-05.jsonl  eval-out-07.jsonl  eval-out-10.jsonl  my-cleaned.jsonl  run-smoke-out-01.jsonl  run-smoke-out-02.jsonl  test-filter.jsonl
data_juicer_agents/: __init__.py  cli.py  session_cli.py
data_juicer_agents/capabilities/: __init__.py
data_juicer_agents/capabilities/apply/: service.py
data_juicer_agents/capabilities/dev/: service.py
data_juicer_agents/capabilities/plan/: __init__.py  generator.py  service.py  validation.py
data_juicer_agents/capabilities/session/: orchestrator.py
data_juicer_agents/commands/: __init__.py  apply_cmd.py  plan_cmd.py  retrieve_cmd.py
data_juicer_agents/tools/: __init__.py  apply_tool_api.py  dataset_probe.py  dev_scaffold.py  dev_tool_api.py
data_juicer_agents/tools/context/: __init__.py  registry.py
data_juicer_agents/tools/op_manager/: __init__.py  op_retrieval.py  (+2 more)
data_juicer_agents/tui/: event_adapter.py  models.py
data_juicer_agents/utils/: dj_config_bridge.py
dj-skills/: SKILL.md  SKILL_ZH.md
docs/: cli.md  cli_ZH.md  overview.md  overview_ZH.md  quick_start.md  quick_start_ZH.md  tools.md  tools_ZH.md
en/main/: .buildinfo  README.html  api.html  docs_index.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
skills/: SKILL.md  apply.md  debug.md  dev.md  plan.md  retrieve.md  session.md
skills/patches/: api-keys.md  custom-ops.md  dataset.md  timeout.md
tests/: test_apply_execution.py  test_dataset_probe.py  test_dj_config_bridge.py  test_llm_utils.py  test_op_retrieval.py  test_operator_registry.py  test_plan_command.py  test_plan_schema.py  test_retrieval_service.py  test_retrieve_command.py  test_session_agent.py  test_session_cli.py  test_tui_event_adapter.py  test_tui_renderer.py
zh_CN/main/: .buildinfo  README_ZH.html  api.html  docs_index_ZH.html  genindex.html  index_ZH.html  objects.inv  py-modindex.html  search.html  searchindex.js
(+1098 files in other folders)
